--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 
 <body>
-  <p>Proactify 2025</p>
+  <div class="main">
+
+    <div class="sidebar">
+      <div class="logo">
+        <img src="img/logo.svg" alt="proactify logo">
+      </div>
+
+      <div class="navbar">
+        <div class="navlink">
+          <p>Time Tracker</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="content">
+
+    </div>
+
+  </div>
+
 </body>
 
 </html>
