--- a/index.html
+++ b/index.html
@@ -4,31 +4,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>Proactify</title>
   <link href="css/style.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
+  <!--Icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 </head>
 
 <body>
-  <div class="main">
-
-    <div class="sidebar">
-      <div class="logo">
-        <img src="img/logo.svg" alt="proactify logo">
-      </div>
-
-      <div class="navbar">
-        <div class="navlink">
-          <p>Time Tracker</p>
-        </div>
-      </div>
+  <nav>
+    <div class="logo">
+      <a href="#">
+        <img src="img/proactify.svg" alt="logo">
+        <h1>Proactify</h1>
+      </a>
     </div>
 
-    <div class="content">
-
+    <div class="link">
+      <a href="#" class="active">
+        <span class="material-icons-outlined" style="font-size: 32px;">
+          dashboard
+        </span>
+        <p>Dashboard</p>
+      </a>
     </div>
 
-  </div>
+    <div class="link">
+      <a href="#">
+        <span class="material-icons-outlined" style="font-size: 32px;">
+          timer
+        </span>
+        <p>Pomodoro</p>
+      </a>
+    </div>
 
+    <div class="link">
+      <a href="#">
+        <span class="material-icons-outlined" style="font-size: 32px;">
+          folder
+        </span>
+        <p>Projects</p>
+      </a>
+    </div>
+
+    <div class="link">
+      <a href="#">
+        <span class="material-icons-outlined" style="font-size: 32px;">
+          list_alt
+        </span>
+        <p>Todo List</p>
+      </a>
+    </div>
+
+    <div>
+      <a href="#">
+        <span class="material-icons-outlined">
+          arrow_forward_ios
+        </span>
+      </a>
+    </div>
+
+  </nav>
+
+  <main>
+
+  </main>
 </body>
 
 </html>
