--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </a>
     </div>
 
-    <div class="link">
-      <a href="#" class="active">
+    <div class="link active">
+      <a href="#">
         <span class="material-icons-outlined" style="font-size: 32px;">
           dashboard
         </span>
@@ -56,17 +56,20 @@
       </a>
     </div>
 
-    <div>
-      <a href="#">
-        <span class="material-icons-outlined">
-          arrow_forward_ios
-        </span>
-      </a>
+    <div id="collapse">
+      <span class="material-icons-outlined" style="font-size: 22px;">
+        arrow_back_ios
+      </span>
     </div>
 
   </nav>
 
   <main>
+    <div id="expand">
+      <span class="material-icons-outlined" style="font-size: 22px;">
+        arrow_forward_ios
+      </span>
+    </div>
 
   </main>
 </body>
