--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Proactify</title>
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/nav.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
   <!--Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <script src="js/nav.js" defer></script>
+
 </head>
 
 <body>
@@ -56,7 +59,7 @@
       </a>
     </div>
 
-    <div id="collapse">
+    <div id="close">
       <span class="material-icons-outlined" style="font-size: 22px;">
         arrow_back_ios
       </span>
