--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dashboard &mdash Proactify</title>
+  <title>Projects &mdash Proactify</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
@@ -17,13 +17,13 @@
 <body>
   <nav class="active">
     <div class="logo">
-      <a href="index.html">
+      <a href="#">
         <img src="img/proactify.svg" alt="logo">
         <h1>Proactify</h1>
       </a>
     </div>
 
-    <div class="link active">
+    <div class="link">
       <a href="index.html">
         <span class="material-icons-outlined" style="font-size: 32px;">
           dashboard
@@ -41,7 +41,7 @@
       </a>
     </div>
 
-    <div class="link">
+    <div class="link active">
       <a href="projects.html">
         <span class="material-icons-outlined" style="font-size: 32px;">
           folder
