--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="active">
+  <nav>
     <div class="logo">
       <a href="index.html">
         <img src="img/proactify.svg" alt="logo">
