--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="active">
     <div class="logo">
       <a href="#">
         <img src="img/proactify.svg" alt="logo">
