--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projects &mdash Proactify</title>
+  <title>Projects &mdash; Proactify</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
   <!--Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
@@ -17,7 +18,7 @@
 <body>
   <nav class="active">
     <div class="logo">
-      <a href="#">
+      <a href="index.html">
         <img src="img/proactify.svg" alt="logo">
         <h1>Proactify</h1>
       </a>
@@ -73,6 +74,8 @@
         arrow_forward_ios
       </span>
     </div>
+
+    <h1>Projects</h1>
 
   </main>
 </body>
