--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Dashboard &mdash; Proactify</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
   <!--Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-  <nav class="active">
+  <nav>
     <div class="logo">
       <a href="index.html">
         <img src="img/proactify.svg" alt="logo">
