--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <nav class="active">
+  <nav>
     <div class="logo">
       <a href="index.html">
         <img src="img/proactify.svg" alt="logo">
@@ -76,7 +76,12 @@
     </div>
 
     <h1>Projects</h1>
-    <button></button>
+    <button class="main-action">
+      <span class="material-icons-outlined">
+        add
+      </span>
+      Add New
+    </button>
 
   </main>
 </body>
