--- a/projects.html
+++ b/projects.html
@@ -8,9 +8,17 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/nav.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/projects.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
   <!--Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
   <script src="js/nav.js" defer></script>
 
 </head>
@@ -76,12 +84,15 @@
     </div>
 
     <h1>Projects</h1>
+
     <button class="main-action">
-      <span class="material-icons-outlined">
+      <span class="material-icons-outlined" style="font-size: 26px;">
         add
       </span>
-      Add New
+      <p>Add New</p>
     </button>
+
+    <!--Creating Modal Box-->
 
   </main>
 </body>
