--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
   <!--Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
+  <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
   <script src="js/nav.js" defer></script>
 
 </head>
