--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="link">
-      <a href="#">
+      <a href="todo.html">
         <span class="material-icons-outlined" style="font-size: 32px;">
           list_alt
         </span>
