--- a/todo.html
+++ b/todo.html
@@ -20,6 +20,7 @@
     rel="stylesheet">
 
   <script src="js/nav.js" defer></script>
+  <script src="js/todo.js" defer></script>
 
 </head>
 
@@ -86,7 +87,16 @@
     <h1>To-Do List</h1>
 
     <div class="todo-app">
-
+      <div class="row">
+        <input type="text" id="input-box" placeholder="Add your text">
+        <button id="add-todo">Add</button>
+      </div>
+      <ul id="list-container">
+        <!--
+        <li class="checked">Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li>-->
+      </ul>
     </div>
 
   </main>
