--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="link">
-      <a href="#">
+      <a href="pomodoro.html">
         <span class="material-icons-outlined" style="font-size: 32px;">
           timer
         </span>
