--- a/todo.html
+++ b/todo.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="link">
-      <a href="#">
+      <a href="pomodoro.html">
         <span class="material-icons-outlined" style="font-size: 32px;">
           timer
         </span>
@@ -92,10 +92,6 @@
         <button id="add-todo">Add</button>
       </div>
       <ul id="list-container">
-        <!--
-        <li class="checked">Task 1</li>
-        <li>Task 2</li>
-        <li>Task 3</li>-->
       </ul>
     </div>
 
