--- a/projects.html
+++ b/projects.html
@@ -1,41 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects &mdash; Proactify</title>
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/nav.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/projects.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet" />
+  <link href="css/projects.css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="img/squircle.svg" />
   <!--Icons-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet" />
 
   <!--Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" />
 
   <script src="js/modal.js" defer></script>
   <script src="js/nav.js" defer></script>
-
 </head>
 
 <body>
   <nav>
     <div class="logo">
       <a href="index.html">
-        <img src="img/proactify.svg" alt="logo">
+        <img src="img/proactify.svg" alt="logo" />
         <h1>Proactify</h1>
       </a>
     </div>
 
     <div class="link">
       <a href="index.html">
-        <span class="material-icons-outlined" style="font-size: 32px;">
+        <span class="material-icons-outlined" style="font-size: 32px">
           dashboard
         </span>
         <p>Dashboard</p>
@@ -44,7 +41,7 @@
 
     <div class="link">
       <a href="pomodoro.html">
-        <span class="material-icons-outlined" style="font-size: 32px;">
+        <span class="material-icons-outlined" style="font-size: 32px">
           timer
         </span>
         <p>Pomodoro</p>
@@ -53,7 +50,7 @@
 
     <div class="link active">
       <a href="projects.html">
-        <span class="material-icons-outlined" style="font-size: 32px;">
+        <span class="material-icons-outlined" style="font-size: 32px">
           folder
         </span>
         <p>Projects</p>
@@ -62,7 +59,7 @@
 
     <div class="link">
       <a href="todo.html">
-        <span class="material-icons-outlined" style="font-size: 32px;">
+        <span class="material-icons-outlined" style="font-size: 32px">
           list_alt
         </span>
         <p>Todo List</p>
@@ -70,16 +67,15 @@
     </div>
 
     <div id="close">
-      <span class="material-icons-outlined" style="font-size: 22px;">
+      <span class="material-icons-outlined" style="font-size: 22px">
         arrow_back_ios
       </span>
     </div>
-
   </nav>
 
   <main>
     <div id="expand">
-      <span class="material-icons-outlined" style="font-size: 22px;">
+      <span class="material-icons-outlined" style="font-size: 22px">
         arrow_forward_ios
       </span>
     </div>
@@ -87,7 +83,7 @@
     <h1>Projects</h1>
 
     <button id="main-action">
-      <span class="material-icons-outlined" style="font-size: 26px;">
+      <span class="material-icons-outlined" style="font-size: 26px">
         add
       </span>
       <p>Add New</p>
@@ -99,25 +95,19 @@
         <div class="header">
           <h2>Add New Project</h2>
           <div id="exit">
-            <span class="material-icons-outlined">
-              clear
-            </span>
+            <span class="material-icons-outlined"> clear </span>
           </div>
         </div>
         <div class="input">
-          <input type="text" id="title" name="title" placeholder="Enter Title">
-          <input type="text" id="description" name="description" placeholder="Enter Description">
+          <input type="text" id="title" name="title" placeholder="Enter Title" />
+          <input type="text" id="description" name="description" placeholder="Enter Description" />
         </div>
         <button class="save">
-          <span class="material-icons-outlined">
-            save
-          </span>
+          <span class="material-icons-outlined"> save </span>
           <p>Save</p>
         </button>
-
       </div>
     </div>
-
   </main>
 </body>
 
