--- a/pomodoro.html
+++ b/pomodoro.html
@@ -85,12 +85,7 @@
     <h1>Pomodoro Timer</h1>
 
     <div class="pomodoro-timer">
-      <!--
-        <div id="pomodoro-overlay">
-          <img src="img/loading.svg" alt="loading spinner" />
-        </div>
--->
-      <span class="material-icons-outlined settings" style="font-size: 24px">
+      <span class="material-icons settings" style="font-size: 24px">
         settings
       </span>
       <div id="timer-progress">
@@ -114,7 +109,7 @@
       </div>
       <div id="timer-functions">
         <div id="timer-settings">
-          <span class="material-icons settings">
+          <span class="material-icons settings" id="close-settings">
             close
           </span>
           <form id="timer-form">
