--- a/pomodoro.html
+++ b/pomodoro.html
@@ -85,7 +85,7 @@
     <h1>Pomodoro Timer</h1>
 
     <div class="pomodoro-timer">
-      <span class="material-icons settings" style="font-size: 24px">
+      <span class="material-icons settings" style="font-size: 24px" id="toggle-settings">
         settings
       </span>
       <div id="timer-progress">
@@ -105,7 +105,7 @@
       </div>
       <div id="timer-sessions">
         <p id="completed-label">Completed work sessions: </p>
-        <p id="completed-sessions">0</p>
+        <p id="completed-sessions"></p>
       </div>
       <div id="timer-functions">
         <div id="timer-settings">
